[project]
name = "ece214-project"
version = "0.1.0"
description = "Noise-robust spoken digit recognition — PNCC features"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "librosa>=0.10",
    "scipy>=1.12",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

# On the GPU training machine, install CUDA torch with:
#   uv sync --extra-index-url https://download.pytorch.org/whl/cu121
